# hwmonitor

./: Cargo.toml  Embed.toml  README.md
src/: gpio.rs  i2c.rs  main.rs  root.rs  text_parser.rs
src/text_parser/: test.rs
testbed/: Cargo.toml
testbed/src/: main.rs  text_parser.rs
