[package]
name = "hwmonitor"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
nrf52832-hal = { version = "0.12.2", features = ["rt"] }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
